<resources>
    <string name="app_name">SDK</string>
    <string name="default_notification_channel_id" translatable="false">Retailer</string>
    <string name="title_home">Home</string>
    <string name="internet_connection">Please Connect to Internet</string>
    <string name="entername">Please enter your name</string>
    <string name="enter_valid_password">Please enter a valid Password</string>
    <string name="enter_shop_Name">Please enter your shop Name</string>
    <string name="gst_length">Please enter valid license number</string>
    <string name="enter_password">Please enter password</string>
    <string name="chance_win">Chance To Win</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="enter_shipping_address">Please Enter Shipping Address</string>
    <string name="enter_mobile_number">Please Enter your Number</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Direct application is available. Please update to version\s</string>
    <string name="youAreNotUpdatedMessage1">\u0020now</string>
    <string name="update">Update</string>
    <string name="cart_item_clear">Alert!</string>
    <string name="txt_cart_clear">Are you sure, want to clear the cart</string>
    <string name="closingApp">Closing Application</string>
    <string name="asktoclose">Do you want to Exit App ?</string>
    <string name="exit_payment_screen_msg">Do you want to exit payment screen?</string>
    <string name="alert_for_exit_screen">Alert</string>
    <string name="reset_pass_text">Your password has been reset ! Your new password has been sent to your registered mobile number.</string>
    <string name="reset_chnage_pass_text">Reset password using the new password sent to your registered mobile number.</string>
    <string name="laguageselect">Please Select Language</string>
    <string name="EnterMobileNumber">Verify Your Number</string>
    <string name="ChangeNumber">Change Number</string>
    <string name="resendotp">RESEND OTP</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="msg_marshmallow_permission_gps">GPS permission allows us to access location data. Please allow in App Settings for additional functionality.</string>
    <string name="submit">Submit</string>
    <string name="Clear_all">Clear all</string>
    <string name="Amount_Payble">Amount Payble:</string>
    <string name="inactive_accnt">Currently your account is inactive.Please contact to customer support.</string>
    <string name="total_item">Total item :\u0020</string>
    <string name="validMobilenumbe">Please enter Valid  Mobile Number</string>
    <string name="entermobilenumber"> Enter Mobile Number</string>
    <string name="enteotp">Please enter OTP</string>
    <string name="verified">verified</string>
    <string name="msg_sendyou_otp">We will send you an one time password</string>
    <string name="msg_sent_otp">We have sent an OTP on your number</string>
    <string name="Search_here">Search Here</string>
    <string name="location">Location</string>
    <string name="Confirm_Location">Confirm Location</string>
    <string name="Price_Details">Price Details</string>
    <string name="details">Details</string>
    <string name="ledger_summary">Summary</string>
    <string name="offer_eligibility">Your order isn\'t eligible for this offer.</string>
    <string name="From">From</string>
    <string name="financial_year">Financial Year</string>
    <string name="ledger_type">Ledger Type</string>
    <string name="ledger_note">Note: Financial year starts from 1st April to 31st March</string>
    <string name="setting">Settings</string>
    <string name="To">to</string>
    <string name="total_amount">Total Amount :\u0020</string>
    <string name="Tiltle_feedback">Feedback</string>
    <string name="Tiltle_BaseCategories">BaseCategory</string>
    <string name="title_categories">Categories</string>
    <string name="title_direct">Seller</string>
    <string name="Tiltle_SubCategories">SubCategories</string>
    <string name="Tiltle_brand">Brand</string>
    <string name="title_offers">Offers</string>
    <string name="title_target">My Target</string>
    <string name="title_order_review">Order Review</string>
    <string name="enter_correct_otp"> Enter Correct OTP</string>
    <string name="itemavailable">No Items Available</string>
    <string name="StartShopping">Start Shopping</string>
    <string name="NoShopping">You have not Placed any Orders Yet</string>
    <string name="sign_up">Sign UP</string>
    <string name="sign_up_tittle">You are not signed up yet</string>
    <string name="summary">Order Summary</string>
    <string name="status">Status</string>
    <string name="totalorder">Total Order</string>
    <string name="amount">Amount</string>
    <string name="delivered">Delivered</string>
    <string name="canceled">Canceled</string>
    <string name="pending">Pending</string>
    <string name="Congratulation">Congratulation</string>
    <string name="Wallet_Points">Wallet Points :</string>
    <string name="myAccount">My Account</string>
    <string name="appguide">App Guide</string>
    <string name="myOrder">My Order</string>
    <string name="myWallet">My Wallet</string>
    <string name="mydream">My Dream</string>
    <string name="myFavourite">My Favourite</string>
    <string name="contact">Contact Us</string>
    <string name="logout">Log Out</string>
    <string name="totalpoint">Total Points</string>
    <string name="buy">Buy</string>
    <string name="total_dreamPoint">Dream Point : \u0020</string>
    <string name="total_dp">DP: </string>
    <string name="moqs">MOQ :\u0020</string>
    <string name="item_mrp">MRP:\u0020</string>
    <string name="delivery_charges">Delivery Charge : \u0020</string>
    <string name="space" translatable="false">\u0020</string>
    <string name="item_moq">MOQ:\u0020</string>
    <string name="payment_option">Payment Option</string>
    <string name="order_summary">Order Summary</string>
    <string name="twenty_percent_off">20% off</string>
    <string name="prime_offer">Fayda Club Offer</string>
    <string name="fav_images">Favourite Images</string>
    <string name="add_btn">ADD</string>
    <string name="moq_size">75 GM</string>
    <string name="moq_mrp">MRP:80</string>
    <string name="item_price">Price</string>
    <string name="moq_margin">Margin:\u0020</string>
    <string name="dream_point">0</string>
    <string name="item_quantity">0</string>
    <string name="item_images">Item Images</string>
    <string name="title_requestbrand"> Enter the Brand Name You Want </string>
    <string name="enetrbrandname"> Brand Name</string>
    <string name="submit_requestbrand">Submit</string>
    <string name="not_empty_brand_name">Brand name can not be empty..</string>
    <string name="request_placed_success">Request Placed Successfully</string>
    <string name="title_feedback">Overall, how satisfied are you with the service? </string>
    <string name="hint">Feedback</string>
    <string name="toast_submitted">Feedback Submitted successfully</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="hint_search">Search</string>
    <string name="select_option">Please select Option</string>
    <string name="pending_payment">Pending Payment</string>
    <string name="hint_search_kisan">Search 1000+ products</string>
    <string name="title_notification">Notification</string>
    <string name="freebies">Freebies</string>
    <string name="hint_mobilenumber">Enter your mobile number</string>
    <string name="hint_passwordr">Password*</string>
    <string name="forget_passwordr">Forgot Password?</string>
    <string name="login">Login </string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_shopname">Enter Shop Name</string>
    <string name="hint_GSt">Enter GSTIN</string>
    <string name="hint_shipping_address">Enter Shipping Address*</string>
    <string name="hint_signup">Sign UP</string>
    <string name="ok">OK</string>
    <string name="pdf">PDF</string>
    <string name="profile">Profile</string>
    <string name="regional">Regional</string>
    <string name="hishab_kitab">My Hisab</string>
    <string name="kisan_dan">Kisan Daan</string>
    <string name="changepassword">Change Password</string>
    <string name="pincode">Pin Code</string>
    <string name="enterdob">Please enter Date Of Birth</string>
    <string name="toast_succesfull">Profile Edited Successfully</string>
    <string name="succesfullSubmitted">Submitted  Successfully</string>
    <string name="enter_license_number">Please enter license number </string>
    <string name="upload_gst">Choose GST Image</string>
    <string name="txt_check_whatsapp">Check if Contact Number and Whatsapp Number is same.</string>
    <string name="txt_check_shiping_address">if shipping address is same as billing address.</string>
    <string name="dob">Date of Birth</string>
    <string name="sk_code">SK Code</string>
    <string name="save">Save</string>
    <string name="changelang">Change Language</string>
    <string name="txt_My_Udhaar">My Udhaar</string>
    <string name="txt_Upload_PAN_Card">Upload PAN Card</string>
    <string name="txt_Upload_Address_Proof">Upload Address Proof</string>
    <string name="txt_Select_income">Select Your Annual Turnover.</string>
    <string name="txt_how_old">Select How Old is Your Business.</string>
    <string name="txt_please_enter_pan_card">Enter PAN Card Number.</string>
    <string name="txt_My_income">Lorem Ipsum is simply dummy text \n of the  printing and typesetting industry.</string>
    <string name="takephoto">Take Picture</string>
    <string name="addphoto">Add Photo</string>
    <string name="txt_Upload_Your_PAN">Upload Your PAN Card to \nGet Credit Limit 25,000/- to 3,00,000/-.</string>
    <string name="txt_Upload_PAN">Upload PAN Card</string>
    <string name="txt_Upload_Document">Upload Document Front Side</string>
    <string name="checkout">Checkout</string>
    <string name="cancel">Cancel</string>
    <string name="txt_Continue">Continue</string>
    <string name="txt_Choose_from_Library">Choose from Library</string>
    <string name="gps_coedinate_update">Please update your GPS Coordinate</string>
    <string name="alert_for_gps">Alert</string>
    <string name="accept_and_continue">Accept and Continue</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="bank_name">Bank Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="please_update_your_information">Please update your information</string>
    <string name="if_want_to_change_lang">If you want to change language please select one and continue</string>
    <string name="select_language">Select Language</string>
    <string name="how_it_work">How it works</string>
    <string name="you_will_get_wallet_points_on_referral_msg">You will get Wallet points on every successful referral\nReferral\'s are allowed up to a limit and can be changed.</string>
    <string name="order_count">Order Count</string>
    <string name="you_get">You Get</string>
    <string name="credit_on">Credit On</string>
    <string name="friend_get">Friend Gets</string>
    <string name="virtual_account_number">Virtual Account Number</string>
    <string name="van_beneficiary">SHOP KIRANA E-TRADING PRIVATE LIMITED</string>
    <string name="van_bank">HDFC BANK LTD</string>
    <string name="branch_name">Branch Name</string>
    <string name="van_branch">Trade House, Indore</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="van_ifsc">HDFC0000036</string>
    <string name="how_rtgs_work"><u>How RTGS work on Direct App</u></string>
    <string name="how_to_add_rtgs_amount"><u>How to add money into RTGS account</u></string>
</resources>