<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/nav_home_selector"
        android:title="@string/title_home" />
    <item
        android:id="@+id/category"
        android:icon="@drawable/nav_category_selector"
        android:title="@string/title_categories" />
    <item
        android:id="@+id/trade"
        android:icon="@drawable/ic_group2"
        android:title="@string/title_direct"
        android:visible="false" />
    <item
        android:id="@+id/offers"
        android:icon="@drawable/nav_offer_selector"
        android:title="@string/title_offers" />
    <item
        android:id="@+id/basket"
        android:icon="@drawable/nav_checkout_selecter"
        android:title="@string/checkout" />
</menu>