<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".main.gullak.RtgsInfoActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="150dp"
                    android:src="@drawable/ic_rtgs_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp">

                    <TextView
                        android:id="@+id/tvVanH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/virtual_account_number" />

                    <TextView
                        android:id="@+id/tvVAN"
                        style="@style/CommonStyleSB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimary1"
                        android:textIsSelectable="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tvBeneficiaryH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beneficiary_name"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvBeneficiary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/van_beneficiary"
                        android:textColor="@color/colorPrimary1"
                        android:textIsSelectable="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tvBankH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bank_name" />

                    <TextView
                        android:id="@+id/tvBank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/van_bank"
                        android:textColor="@color/colorPrimary1"
                        android:textIsSelectable="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tvBranchH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/branch_name" />

                    <TextView
                        android:id="@+id/tvBranch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/van_branch"
                        android:textColor="@color/colorPrimary1"
                        android:textIsSelectable="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tvIfscH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ifsc_code"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvIfsc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/van_ifsc"
                        android:textColor="@color/colorPrimary1"
                        android:textIsSelectable="true" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvHowItWork"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="6dp"
                android:backgroundTint="@color/colorAccent"
                android:minWidth="100dp"
                android:text="@string/txt_Continue"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvHowItWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvHowToAdd"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="6dp"
                android:text="@string/how_rtgs_work"
                android:textColor="@color/light_blue_900" />

            <TextView
                android:id="@+id/tvHowToAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="6dp"
                android:text="@string/how_to_add_rtgs_amount"
                android:textColor="@color/light_blue_900" />
        </RelativeLayout>
    </LinearLayout>
