<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="55dp"
    android:layout_marginEnd="55dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_language" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/CommonStyleB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/select_language"
            android:textColor="@color/primary_text"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvDesc"
            style="@style/CommonStyleSB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="13"
            android:gravity="center"
            android:text="@string/if_want_to_change_lang"
            android:textColor="@color/tertiary_text"
            android:textSize="13sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/radioHindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hindi" />

            <RadioButton
                android:id="@+id/radioEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/english" />
        </RadioGroup>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/colorAccent"
            android:minWidth="130dp"
            android:minHeight="50dp"
            android:text="@string/txt_Continue"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.cardview.widget.CardView>