<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="45dp"
    android:layout_marginEnd="45dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_warning_orange"
            app:tint="@color/colorAccent" />

        <TextView
            style="@style/CommonStyleB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/alert_for_gps"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pd_title"
            style="@style/CommonStyleSR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="13"
            android:gravity="center"
            android:text="@string/gps_coedinate_update"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvInfo"
            style="@style/CommonStyleSR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/please_update_your_information"
            android:textSize="13sp" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:minWidth="120dp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/colorAccent" />
    </LinearLayout>
</androidx.cardview.widget.CardView>