<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="120dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHow"
            style="@style/CommonStyleSB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/how_it_work"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPointsMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/you_will_get_wallet_points_on_referral_msg"
            android:textColor="@color/secondary_text"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp">

            <TextView
                android:id="@+id/tvOrderCountH"
                style="@style/CommonStyleSB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_count"
                android:textColor="@color/tertiary_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvYouGetH"
                style="@style/CommonStyleSB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/you_get"
                android:textColor="@color/tertiary_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvFriendGetH"
                style="@style/CommonStyleSB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friend_get"
                android:textColor="@color/tertiary_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tcCreditOnH"
                style="@style/CommonStyleSB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credit_on"
                android:textColor="@color/tertiary_text"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReferral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_refer_config" />
    </LinearLayout>
</LinearLayout>